# course_roster

./: .gitignore  README.md  pyproject.toml  requirements-optional.txt  requirements.txt  setup.cfg
shared/html/: peer-evaluation.html
src/course_roster/: analyze_git_activity.py  analyze_peer_evaluations.py  roster.py  roster_utils.py
